--- a/Dragon-Ball/index0.html
+++ b/Dragon-Ball/index0.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>World Dragon Ball</title>
 </head>
 <body>
-    
+    <header>
+        <h1>World Dragon Ball</h1>
+    </header>
 </body>
 </html>
