--- a/Dragon-Ball/index0.html
+++ b/Dragon-Ball/index0.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>World Dragon Ball</h1>
+        <h1>Guerreiros Z</h1>
     </header>
-    <h1>Guerreiros Z</h1>
     <section>
         <nome>
             <h2>Son Guku(Goku)</h2>
@@ -95,7 +94,18 @@
         </p>
     </section>
     <section>
+        <nome>
+            <h2>Gohan</h2>
+        </nome>
 
+        <img src="imagens/gohan-criança.jpg" alt=""><br>
+        <nome2>Gohan criança</nome2>
+
+        <p>
+            Gohan é o primeiro filho do protagonista da série Goku e sua esposa Chichi, o mais irmão mais velho de Goten, o esposo de Videl e pai de Pan. Gohan é o primeiro híbrido (meio terráqueo, meio Saiyajin) a aparecer nas séries. Ele é nomeado após o avô adotivo de Goku, Gohan.
+            Diferente de seu pai, Gohan não tem paixão por lutas e prefere fazê-lo apenas quando precisa defender seus amigos. Porém, Gohan luta com os Guerreiros Z para defesa da Terra durante grande parte da sua vida. Ele eventualmente estabelece uma família ao fim de Dragon Ball Z, optando pela vida de cientista.
+        </p>
     </section>
+
 </body>
 </html>
