--- a/Dragon-Ball/index0.html
+++ b/Dragon-Ball/index0.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="esfera.ico" type="image/x-icon">
     <title>World Dragon Ball</title>
 </head>
 <body>
     <header>
-        <h1>Guerreiros Z</h1>
+        <a href="index.html"><img src="imagens/Dragon-Ball-Logo.png" alt=""></a>
     </header>
     <section>
         <nome>
