--- a/Dragon-Ball/index.html
+++ b/Dragon-Ball/index.html
@@ -8,25 +8,39 @@
     <link rel="shortcut icon" href="esfera.ico" type="image/x-icon">
     <title>World Dragon Ball</title>
     <style>
-        body{
-            background-color: #e79902;
-            color: #f20519;
+        *{
+            margin: 0px;
+
         }
+        body{
+            margin: 0px;
+            color: #f20519;
+            background-image: url(imagens/fundo.jpg);
+        }
+        header{
+            display: block;
+            background-color: #e7640d;
 
-
-
-
+        }
+        menu{
+            background-color: white;
+            margin: 10px;
+            margin-top: 5px;
+            border-radius: 10px;
+            height: 98vh;
+        }
     </style>
 </head>
 <body>
+    
     <header>
         <a href="index.html"><img src="imagens/Dragon-Ball-Logo.png" alt=""></a>
-        <h2>Curiosidades de Dragon Ball você encontra aqui</h2>
     </header>
     <menu>
+        <h2>Intrudução:</h2>
         <ul>
             <li>
-                <a style="text-decoration: none; color: #e7640d; font-size: 40px; background-color: #f20519; width: 100px; height: 20px;" href="index0.html">Guerreiro Z</a>
+                <a style="text-decoration: none; color: #e7640d; font-size: 40px; " href="index0.html">Guerreiro Z</a>
             </li>
         </ul>
     </menu>
