--- a/Dragon-Ball/index0.html
+++ b/Dragon-Ball/index0.html
@@ -14,7 +14,7 @@
     </header>
     <section>
         <nome>
-            <h2>Son Guku(Goku)</h2>
+            <h2>Son Goku(Goku)</h2>
         </nome>
         <img src="imagens/goku.perfil.jpg" alt=""> <br> <nome2>Guko adulto</nome2>
         
