--- a/Dragon-Ball/index.html
+++ b/Dragon-Ball/index.html
@@ -40,7 +40,7 @@
         <h2>Intrudução:</h2>
         <ul>
             <li>
-                <a style="text-decoration: none; color: #e7640d; font-size: 40px; " href="index0.html">Guerreiro Z</a>
+                <a style="text-decoration: none; color: #e7640d; font-size: 40px; background-color: #f20519;" href="index0.html">Guerreiro Z</a>
             </li>
         </ul>
     </menu>
