--- a/Mercado/index.html
+++ b/Mercado/index.html
@@ -35,13 +35,22 @@
     </div>
     <div id="body">
         <div id="carros">
+            <div id="next" class="bt">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+            </div>
+            <div id="back" class="bt">
+                <i class="fa fa-angle-right" ></i>
+            </div>
             <div class="slide">
                 <div class="slides">
                     <div id="atual" class="images">
-                        <img src="imagens/carossel-1.jpg" alt="carossel-1">
+                        <a href="https://www.camil.com.br/campanhas/comida-de-casa-e-camil/?gclid=EAIaIQobChMIsOTQgOyG9wIVBSeRCh1HDw4ZEAAYASAAEgJpk_D_BwE"><img src="imagens/carossel-1.jpg" alt="carossel-1"></a>
                     </div>
                     <div class="images">
                         <img src="imagens/supermercado.jpg" alt="">
+                    </div>
+                    <div class="=images">
+                        <img src="imagens/logo-sup.png" alt="">
                     </div>
                 </div>
             </div>
@@ -61,8 +70,34 @@
             i.style.height=('0px')
             p.style.display=('none')
         }
-              
-            
+        var next = window.document.getElementById('next')
+        var back = window.document.getElementById('back')
+        var Imagens = window.document.getElementById('atual')
+        var atual = 0
+        var rolar = true
+        next.addEventListener('click', ()=>{
+        atual--
+        rolar=false
+        slide()
+        })
+        back.addEventListener('click', ()=>{
+        atual++
+        rolar=false
+        slide()
+        })
+        var largura = window.innerWidth
+        || document.documentElement.clientWidth
+        || document.body.clientWidth;
+        function slide(){
+            if(atual >= 3){
+                atual=0
+            }
+            else if(atual < 0){
+                atual = 3-1
+            }
+            Imagens.style.marginLeft = '-'+largura*atual+'px'   
+        }
+
     </script>
 </body>
 </html>
