--- a/planta-medicina/index.html
+++ b/planta-medicina/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="cabeça">
-        <a id=logo href="index.html"><img src="image/Logo-site.png" alt="Logo-site">
+        <a id=logo href="index.html">
+            <img id="img" src="image/Logo-site.png" alt="Logo-site">
         </a>
     </div>
     <div id="conteudo">
