--- a/planta-medicina/index.html
+++ b/planta-medicina/index.html
@@ -12,6 +12,12 @@
         <a id=logo href="index.html">
             <img id="img" src="image/Logo-site.png" alt="Logo-site">
         </a>
+        <div id="menunav">
+            <ul>
+                <li class="list">Página Inicial</li>
+                <li class="list">Suporte</li>
+            </ul>
+        </div>
     </div>
     <div id="conteudo">
         <div id="seçao">
