--- a/planta-medicina/index.html
+++ b/planta-medicina/index.html
@@ -12,12 +12,12 @@
         <a id=logo href="index.html">
             <img id="img" src="image/Logo-site.png" alt="Logo-site">
         </a>
-        <div id="menunav">
-            <ul>
-                <li class="list">Página Inicial</li>
-                <li class="list">Suporte</li>
+        <nav id="nav">
+            <ul id="menu">
+                <li><a href="">Página Inicial</a></li>
+                <li><a href="">Suporte</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
     <div id="conteudo">
         <div id="seçao">
