--- a/planta-medicina/index.html
+++ b/planta-medicina/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Plantas Medicinais</title>
 </head>
@@ -17,11 +18,17 @@
                 <li><a href="">Página Inicial</a></li>
                 <li><a href="">Suporte</a></li>
             </ul>
+            <button id="btn-menu"><i class="fas fa-bars" aria-hidden="true"></i></button>
         </nav>
     </div>
     <div id="conteudo">
         <div id="seçao">
             <div class="planta">
+                <h1><b>HORTELÃ</b></h1>
+                <img src="image/folha-de-hortelã.jpg" alt="">
+                <p style="text-indent: 16px">
+                    Hortelã é uma planta muito eficaz e facil de acha contra a gripe dor de gartanta resfriado ta é muito eficaz
+                </p>
             </div>
             <div class="planta">
             </div>
@@ -35,9 +42,5 @@
             </div>
         </div>
     </div>
-
-
-
-
 </body>
 </html>
