--- a/planta-medicina/index.html
+++ b/planta-medicina/index.html
@@ -24,10 +24,10 @@
     <div id="conteudo">
         <div id="seçao">
             <div class="planta">
-                <h1><b>HORTELÃ</b></h1>
-                <img src="image/folha-de-hortelã.jpg" alt="">
-                <p style="text-indent: 16px">
-                    Hortelã é uma planta muito eficaz e facil de acha contra a gripe dor de gartanta resfriado ta é muito eficaz
+                <h1 id="title"><b>HORTELÃ</b></h1>
+                <img id="img-1" src="image/folha-de-hortelã.jpg" alt="">
+                <p id="text" style="text-indent: 16px">
+                    
                 </p>
             </div>
             <div class="planta">
